# app/Http/Controllers/AuthController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\LoginUserRequest;
+use App\Http\Requests\RegisterUserRequest;
 use App\Http\Resources\UserResource;
 use App\Models\User;
 use Illuminate\Http\Request;
@@ -19,11 +20,11 @@ class AuthController extends Controller
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *             required={"name", "email", "password", "confirm_password"},
+     *             required={"name", "email", "password", "password_confirmation"},
      *             @OA\Property(property="name", type="string", example="John Doe"),
      *             @OA\Property(property="email", type="string", example="john.doe@example.com"),
      *             @OA\Property(property="password", type="string", example="password"),
-     *             @OA\Property(property="confirm_password", type="string", example="password")
+     *             @OA\Property(property="password_confirmation", type="string", example="password")
      *         )
      *     ),
      *     @OA\Response(
@@ -40,7 +41,7 @@ class AuthController extends Controller
      *     )
      * )
      */
-    public function register(Request $request)
+    public function register(RegisterUserRequest $request)
     {
         if (User::where('email', $request->email)->exists()) {
             return response()->json(['message' => 'Email already in use.'], 400);
